--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -16,19 +16,14 @@
 }
 
 .article.row-article .article-img {
-    width:49%;
+    width:45%;
     float:left;
     margin-right:30px;
     margin-bottom:0px;
 }
 
-.showMore {
-    text-align: center;
-    margin-bottom: 25px;
-}
-
-.moreNews {
-    margin-top: 20px;
+.rowNews {
+    display: flex;
 }
 
 @media only screen and (max-width: 767px) {
