--- a/src/components/ButtonRows/ButtonRows.css
+++ b/src/components/ButtonRows/ButtonRows.css
@@ -10,13 +10,11 @@
     padding: 10px 20px;
     text-transform: uppercase;
     font-size: 12px;
-    background: #c9302c;
+    background: #fb5;
     border: none;
-    color: #000000;
+    color: #ffffff;
 }
 
 .button-select button:hover {
-    background: #c9302c;
-    border: none;
-    color: #FFFFFF;
+    background: #fa5;
 }
