--- a/src/components/ui/Logo/Logo.css
+++ b/src/components/ui/Logo/Logo.css
@@ -7,7 +7,11 @@
 }
 
 .header-logo .logo > img {
-    width: 100%;
     max-height: 90px;
     padding: 10px;
+}
+
+.header-text {
+    display: inline-block;
+    vertical-align: middle;
 }
