--- a/src/components/ButtonRows/ButtonRows.css
+++ b/src/components/ButtonRows/ButtonRows.css
@@ -7,12 +7,12 @@
 }
 
 .button-select button {
-    padding: 10px 20px;
+    padding: 10px 40px;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     background: #fb5;
     border: none;
-    color: #ffffff;
+    color: #000000;
 }
 
 .button-select button:hover {
