--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Noto Serif KR', sans-serif;
   color:#2C2C2C;
   font-size:15px;
   font-weight:300;
